versioned_docs/version-2.20/reference/subsystems/pex.mdx
---
title: pex
description: |
  How Pants uses Pex to run Python subprocesses.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

How Pants uses Pex to run Python subprocesses.

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[pex]`</span>

<span className={styles.options}>

## Basic options

### `emit_warnings`

<Option
  cli_repr={`--[no-]pex-emit-warnings`}
  env_repr='PANTS_PEX_EMIT_WARNINGS'
  toml_repr={`[pex]
emit_warnings = <bool>`}
  default_repr={`False`}
>

If warnings from Pex should be logged by Pants to the console.

Note: Pants uses Pex internally in some ways that trigger some warnings at the moment, so enabling this may result in warnings not related to your code. See &#x3C;https://github.com/pantsbuild/pants/issues/20577&#x3E; and &#x3C;https://github.com/pantsbuild/pants/issues/20586&#x3E;.

</Option>

## Advanced options

### `executable_search_paths`

<Option
  cli_repr={`--pex-executable-search-paths="[<binary-paths>, <binary-paths>, ...]"`}
  env_repr='PANTS_PEX_EXECUTABLE_SEARCH_PATHS'
  toml_repr={`[pex]
executable_search_paths = [
    <binary-paths>,
    <binary-paths>,
    ...,
]`}
  default_repr={`[\n  "<PATH>"\n]`}
  target_field_name='pex_executable_search_paths'
>

The PATH value that will be used by the PEX subprocess and any subprocesses it spawns.

The special string `"<PATH>"` will expand to the contents of the PATH env var.

</Option>

### `venv_use_symlinks`

<Option
  cli_repr={`--[no-]pex-venv-use-symlinks`}
  env_repr='PANTS_PEX_VENV_USE_SYMLINKS'
  toml_repr={`[pex]
venv_use_symlinks = <bool>`}
  default_repr={`False`}
>

When possible, use venvs whose site-packages directories are populated with symlinks.

Enabling this can save space in the `--named-caches-dir` directory and lead to slightly faster execution times for Pants Python goals. Some distributions do not work with symlinked venvs though, so you may not be able to enable this optimization as a result.

</Option>

### `verbosity`

<Option
  cli_repr={`--pex-verbosity=<int>`}
  env_repr='PANTS_PEX_VERBOSITY'
  toml_repr={`[pex]
verbosity = <int>`}
  default_repr={`0`}
>

Set the verbosity level of PEX logging, from 0 (no logging) up to 9 (max logging).

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
